--- a/cf-ecs-eb.yaml
+++ b/cf-ecs-eb.yaml
@@ -20,17 +20,14 @@ Parameters:
     Type: String
     Description: Enter the task security group as a string
   Subnets:
-    Type: String
-    Description: Enter the subnet for the task
+    Type : String
+    Description: Enter the subnets for the task
   StateMachineS3Bucket:
     Type: String
     Description: Enter the s3 bucket where state machine definition is stored
   StateMachineS3Key:
     Type: String
     Description: Enter state machine definition file name
-  ConcurrencyLimit:
-    Type: Number
-    Description: Enter the maximum number of concurrent ECS tasks
 Resources:
   ECSStateMachine:
     Type: AWS::StepFunctions::StateMachine
@@ -56,8 +53,6 @@ Resources:
           Ref: SecurityGroups
         Subnets:
           Ref: Subnets
-        ConcurrencyLimit:
-          Ref: ConcurrencyLimit
       DefinitionS3Location:
         Bucket: 
           Ref: StateMachineS3Bucket
